Fix footer overlap on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -181,6 +181,10 @@ footer {
     justify-content: space-around;
     list-style: none;
     margin: 0;
+
+    li {
+      margin: 0 1rem;
+    }
   }
 
   a {
